tests/snapshots/examples_fixtures/aoc__2025__aoc_day2_haskell_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day2_haskell_style.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `first`.

  examples/aoc/2025/aoc_day2_haskell_style.flx:37:17
   |
37 |     let start = first(split_ints(trim(token), "-"));
   |                 ^^^^^

Hint:
  Define it first: let first = ...;


error[E004]: Undefined Variable

I can't find a value named `last`.

  examples/aoc/2025/aoc_day2_haskell_style.flx:38:15
   |
38 |     let end = last(split_ints(trim(token), "-"));
   |               ^^^^

Hint:
  Define it first: let last = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day2_haskell_style.flx:47:8
   |
47 |     |> map(/t -> parse_range_token(t))
   |        ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2025/aoc_day2_haskell_style.flx:56:15
   |
56 |     ranges |> fold(false, /(found, r) -> if found { true } else { id_in_range(id, r) })
   |               ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2025/aoc_day2_haskell_style.flx:92:8
   |
92 |     |> fold(state, /(acc, s) ->
   |        ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `range`.

  examples/aoc/2025/aoc_day2_haskell_style.flx:126:20
    |
126 | let day02b = day02(range(2, 12), ranges)
    |                    ^^^^^

Hint:
  Define it first: let range = ...;

Help:
  Did you mean `ranges`?


error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `day02`.

  examples/aoc/2025/aoc_day2_haskell_style.flx:126:20
    |
115 | fn day02(repeat_counts, ranges) {
116 | 
117 |     solve_for_repeat_counts(repeat_counts, ranges, (0, {}))
118 | }
119 | 
120 | let ranges = parse_ranges("examples/aoc/2025/aoc_day2.txt")
... |
124 | 
125 | 
126 | let day02b = day02(range(2, 12), ranges)
    |                    ^^^^^^^^^^^^
    |                    ------------ this argument has type `Array<Int>`

Note:
  expected argument type: List<Int>
  found argument type: Array<Int>
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Pass a `List<Int>` value as the 1st argument.

Found 7 errors.
== stdout ==
<not executed>
